--- a/ember-components/assets/examples.css
+++ b/ember-components/assets/examples.css
@@ -97,6 +97,41 @@ pre.prettyprint {
 }
 
 
+i[sticky=true] {
+    color: red;
+}
+
+
+li.em-tree-node > span.em-tree-node-multiselection {
+    color: #6fb3e0;
+    background-color: white;
+    border: 1px solid #CCC;
+    border-radius: 3px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.06);
+
+    width: 13px;
+    height: 13px;
+    line-height: 12px;
+    top: -1px;
+    margin-top: -1px;
+
+    font-size: 10px;
+    text-align: center;
+    
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    display: inline-block;
+    position: relative;
+    z-index: 3;
+    
+}
+
+li.em-tree-node[in-multi-selected=true] > span.em-tree-node-multiselection {
+    background-color: #478fca;
+    border-color: #478fca;
+    color: #FFF;
+}
 /*
  * Social buttons
  *
